# FormalLanguagesTasks

./: CMakeLists.txt  README.md
Code/: Node.cpp  Node.h  RegularExpression.cpp  RegularExpression.h  main.cpp
Tests/: CMakeLists.txt  tests.cpp
